--- a/17_file/question.ipynb
+++ b/17_file/question.ipynb
@@ -22,29 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "a5d9b350",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'diary.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdiary.txt\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      2\u001b[39m     f.write(\u001b[33m\"\u001b[39m\u001b[33m오늘은 파일 입출력을 배웠습니다.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m다양한 파일 확장자와 접근 모드를 사용할 수 있다는 점이 흥미로웠습니다.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mdiary.txt\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m, encoding=\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PYTHON\\python_venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:343\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    336\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    337\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    338\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    339\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m343\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'diary.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오늘은 파일 입출력을 배웠습니다.\n",
+      "다양한 파일 확장자와 접근 모드를 사용할 수 있다는 점이 흥미로웠습니다.\n"
      ]
     }
    ],
    "source": [
-    "with open('diary.txt', 'r', encoding='utf-8') as f:\n",
+    "with open('diary.txt', 'w', encoding='utf-8') as f:\n",
     "    f.write(\"오늘은 파일 입출력을 배웠습니다.\\n다양한 파일 확장자와 접근 모드를 사용할 수 있다는 점이 흥미로웠습니다.\")\n",
     "\n",
-    "with open('diary.txt', 'r', encoding='utf-8') as f:\n",
-    "    print(f.read())"
+    "with open('diary.txt', 'r', encoding='utf-8') as f2:\n",
+    "    print(f2.read())"
    ]
   },
   {
@@ -70,25 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "aa98a0b3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'application.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      2\u001b[39m     f.write(\u001b[33m\"\"\"\u001b[39m\u001b[33m회사명, 직무, 결과\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m    \u001b[39m\u001b[33m\"\u001b[39m\u001b[33m회사A,데이터 분석가,합격\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m    \u001b[39m\u001b[33m\"\u001b[39m\u001b[33m회사B,소프트웨어 엔지니어,불합격\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[33m    \u001b[39m\u001b[33m\"\u001b[39m\u001b[33m회사C,제품 관리자,진행 중\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[33m\"\"\"\u001b[39m)\n\u001b[32m      7\u001b[39m f.close()\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mapplication.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     10\u001b[39m     reader = csv.reader(csv_file)\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PYTHON\\python_venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:343\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    336\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    337\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    338\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    339\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m343\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'application.csv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "회\n",
+      "사\n",
+      "명\n",
+      ",\n",
+      "직\n",
+      "무\n",
+      ",\n",
+      "결\n",
+      "과\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "with open(\"applications. csv\", 'w', encoding='utf-8') as f:\n",
+    "with open(\"applications.csv\", 'w', encoding='utf-8') as f:\n",
     "    f.write(\"\"\"회사명, 직무, 결과\\n\"\n",
     "    \"회사A,데이터 분석가,합격\\n\"\n",
     "    \"회사B,소프트웨어 엔지니어,불합격\\n\"\n",
@@ -96,10 +97,10 @@
     "\"\"\")\n",
     "f.close()\n",
     "\n",
-    "with open(\"application.csv\", 'r', encoding=\"utf-8\") as f:\n",
-    "    reader = csv.reader(csv_file)\n",
+    "with open(\"application.csv\", 'r', encoding=\"utf-8\") as f2:\n",
+    "    reader = f2.readline()\n",
     "    for row in reader:\n",
-    "        print(\", \". join(row))\n"
+    "        print(row)\n"
    ]
   },
   {
@@ -112,8 +113,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:4: SyntaxWarning: list indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "C:\\Users\\신승훈\\AppData\\Local\\Temp\\ipykernel_27276\\368708051.py:4: SyntaxWarning: list indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "<>:5: SyntaxWarning: list indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "C:\\Users\\신승훈\\AppData\\Local\\Temp\\ipykernel_25112\\2339520910.py:5: SyntaxWarning: list indices must be integers or slices, not str; perhaps you missed a comma?\n",
       "  [\"회사명\", \"직무\", \"결과\"]\n"
      ]
     },
@@ -124,7 +125,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcsv\u001b[39;00m\n\u001b[32m      3\u001b[39m data = [\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m회사명\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m직무\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m결과\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m회사A,데이터 분석가,합격\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      6\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33m회사B,소프트웨어 엔지니어,불합격\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      7\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33m회사C,제품 관리자,진행 중\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      8\u001b[39m ]\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# CSV 형태로 저장하기\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcsv\u001b[39;00m\n\u001b[32m      4\u001b[39m data = [\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m회사명\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m직무\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m결과\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m회사A,데이터 분석가,합격\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      7\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33m회사B,소프트웨어 엔지니어,불합격\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      8\u001b[39m     [\u001b[33m\"\u001b[39m\u001b[33m회사C,제품 관리자,진행 중\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      9\u001b[39m ]\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m#파일 쓰기\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mapplication.csv\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mw\u001b[39m\u001b[33m\"\u001b[39m, newline=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, encoding=\u001b[33m\"\u001b[39m\u001b[33mutf=8\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
       "\u001b[31mTypeError\u001b[39m: list indices must be integers or slices, not str"
      ]
     }
@@ -134,15 +135,15 @@
     "import csv\n",
     "\n",
     "data = [\n",
-    "    [\"회사명\", \"직무\", \"결과\"]\n",
-    "    [\"회사A,데이터 분석가,합격\"]\n",
-    "    [\"회사B,소프트웨어 엔지니어,불합격\"]\n",
+    "    [\"회사명\", \"직무\", \"결과\"],\n",
+    "    [\"회사A,데이터 분석가,합격\"],\n",
+    "    [\"회사B,소프트웨어 엔지니어,불합격\"],\n",
     "    [\"회사C,제품 관리자,진행 중\"]\n",
     "]\n",
     "#파일 쓰기\n",
     "with open(\"application.csv\", \"w\", newline=\"\", encoding=\"utf=8\") as f:\n",
-    "    writer = csv.writer(f) #csv 작성 도구 생성\n",
-    "    writer.writerows(data)\n",
+    "    csv_writer = csv.writer(f) #csv 작성 도구 생성\n",
+    "    csv_writer.writerows(data)\n",
     "#파일 읽기\n",
     "with open(\"application.csv\", 'r', encoding=\"utf-8\") as f:\n",
     "    for row in reader: #csv.reader(파일객체)\n",
@@ -289,24 +290,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "55d9700d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': '카피바라', 'favorite_foods': ['고기', '과자', '아이스크림']}\n",
+      "['고기', '과자', '아이스크림']\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
-    "data = {\n",
-    "    \"name\": \"카피바라\",\n",
-    "    \"favorite_foods\": [\"고기\", \"과자\", \"아이스크림\"]\n",
-    "}\n",
+    "data = '{\"name\": \"카피바라\",\"favorite_foods\": [\"고기\", \"과자\", \"아이스크림\"]}'\n",
     "\n",
     "with open('favortie_foods.json', 'w', encoding='utf-8') as json_file:\n",
     "    json_file.write(data)\n",
     "\n",
-    "with open('favortie_foods.json', 'w', encoding='utf-8') as json_file:\n",
-    "    json_dict = json.load(json_file)\n",
-    "    # print(json_dict, type(json_dict))\n",
+    "with open('favortie_foods.json', 'r', encoding='utf-8') as json_file2:\n",
+    "    json_dict = json.load(json_file2)\n",
+    "    print(json_dict)\n",
     "    print(json_dict['favorite_foods'])"
    ]
   },
@@ -407,6 +414,12 @@
     "    with open('resume.html', 'w', encoding=\"utf-8\") as f:\n",
     "    print(f.read())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b09240ad",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
