--- a/19_Streamlit/exercise.ipynb
+++ b/19_Streamlit/exercise.ipynb
@@ -1,12 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff786de5",
+   "cell_type": "markdown",
+   "id": "7fd92ee2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 주제 2: 리스트와 딕셔너리를 활용한 학생 성적 관리 시스템\n",
+    "학생들의 성적 데이터를 관리하는 시스템을 만드세요:\n",
+    "\n",
+    "```python\n",
+    "# 주어진 데이터 구조\n",
+    "students = [\n",
+    "    {\"name\": \"김철수\", \"subjects\": {\"수학\": 85, \"영어\": 90, \"과학\": 78}},\n",
+    "    {\"name\": \"이영희\", \"subjects\": {\"수학\": 92, \"영어\": 88, \"과학\": 95}},\n",
+    "    {\"name\": \"박민수\", \"subjects\": {\"수학\": 78, \"영어\": 85, \"과학\": 82}},\n",
+    "    {\"name\": \"정지혜\", \"subjects\": {\"수학\": 88, \"영어\": 92, \"과학\": 89}}\n",
+    "]\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
