--- a/18_Exception/question.ipynb
+++ b/18_Exception/question.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "4059fb22",
    "metadata": {},
    "outputs": [
@@ -30,12 +30,37 @@
    ],
    "source": [
     "try:\n",
-    "    with open(\"data.txt\", \"r\" , encoding=\"utf-8\") as f:\n",
-    "        content = f.read()\n",
+    "    with open(\"data.txt\", \"r\" , encoding=\"utf-8\") as file_read:\n",
+    "        content = file_read.read()\n",
     "except:\n",
     "    print(\"파일이 존재하지 않습니다.\")\n",
     "else:\n",
     "    print(content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "65748452",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata.txt\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      3\u001b[39m     content = f.read()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PYTHON\\python_venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:343\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    336\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    337\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    338\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    339\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m343\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'data.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.txt\", \"r\" , encoding=\"utf-8\") as f:\n",
+    "    \n",
+    "    content = f.read()"
    ]
   },
   {
@@ -52,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "45bf8afa",
    "metadata": {},
    "outputs": [
@@ -60,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "성인입니다.\n"
+      "에러 발생\n"
      ]
     }
    ],
@@ -76,6 +101,26 @@
     "except:\n",
     "    print(\"에러 발생\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d8c9a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'asd'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m age=\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m나이를 입력하세요\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m age >= \u001b[32m19\u001b[39m:\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m성인입니다.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'asd'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -94,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0cfc3127",
    "metadata": {},
    "outputs": [
@@ -102,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0으로 나눌 수 없습니다. division by zero\n"
+      "숫자를 입력해야 합니다. invalid literal for int() with base 10: 'af'\n"
      ]
     }
    ],
@@ -115,6 +160,30 @@
     "    print(\"0으로 나눌 수 없습니다.\", e)\n",
     "except ValueError as e:\n",
     "    print(\"숫자를 입력해야 합니다.\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "355635f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m num1 = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m두 숫자를 입력하세요.\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      2\u001b[39m num2 = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m두 숫자를 입력하세요.\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mnum1\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum2\u001b[49m\n",
+      "\u001b[31mZeroDivisionError\u001b[39m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input(\"두 숫자를 입력하세요.\"))\n",
+    "num2 = int(input(\"두 숫자를 입력하세요.\"))\n",
+    "num1 / num2"
    ]
   },
   {
@@ -134,20 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93d377bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    with open('log.txt', 'r', encoding='utf-8') as f:\n",
-    "        print(f.read())\n",
-    "except:\n",
-    "    print(\"파일을 열 수 없습니다\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "id": "ce2f068a",
    "metadata": {},
    "outputs": [
@@ -155,18 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "파일을 열 수 없습니다.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m파일을 열 수 없습니다.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mf\u001b[49m:\n\u001b[32m      9\u001b[39m         f.close()\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m파일 자원 정리 완료\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'f' is not defined"
+      "파일을 열 수 없습니다.\n",
+      "파일 자원 정리 완료\n"
      ]
     }
    ],
@@ -176,11 +221,8 @@
     "        print(f.read())\n",
     "except:\n",
     "    print(\"파일을 열 수 없습니다.\")\n",
-    "\n",
     "finally:\n",
-    "    if f:\n",
-    "        f.close()\n",
-    "    print(\"파일 자원 정리 완료\")"
+    "    print(\"파일 자원 정리 완료\")\n"
    ]
   },
   {
@@ -199,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e437186e",
    "metadata": {},
    "outputs": [
@@ -207,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5\n"
+      "2.0\n"
      ]
     }
    ],
@@ -215,10 +257,18 @@
     "try:\n",
     "    num = int(input(\"숫자를 입력하세요.\"))\n",
     "except ValueError:\n",
-    "    print(`\"숫자를 입력해야 합니다.\")`\n",
+    "    print(\"숫자를 입력해야 합니다.\")\n",
     "else:\n",
     "    print(num/2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2b5332e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
